# GPU

./: README.md
Basic_CUDA/: Makefile  README.md  run.sh
Basic_CUDA/src/: dataset_generator.cpp  device_query.cu  device_query.cuh  main.cu  vec_add.cu  vec_add.cuh
Convolution/: CMakeLists.txt  README.md  compute_grad_norm.sh  run_tests.sh
Convolution/Conv2D/: CMakeLists.txt
Convolution/Conv2D/src/: conv2d_cpu.cpp  conv2d_cpu.hpp  conv2d_gpu.cu
Convolution/Conv2DCMem/: CMakeLists.txt
Convolution/Conv2DCMem/src/: conv2d_gpu.cu
Convolution/Conv2DTiled/: CMakeLists.txt
Convolution/Conv2DTiled/src/: conv2d_gpu.cu
Convolution/Conv2DTiledCache/: CMakeLists.txt
Convolution/Conv2DTiledCache/src/: conv2d_gpu.cu
Convolution/GradientImage/: CMakeLists.txt
Convolution/GradientImage/src/: conv2d_gpu.cu  grad_image.cpp
MultGrid_Data/: CMakeLists.txt  README.md  blur_image.sh  convert_image.sh  run_tests.sh
MultGrid_Data/BlurImage/: CMakeLists.txt
MultGrid_Data/BlurImage/src/: blur_gpu.cu  dataset_generator.cpp  main.cpp
MultGrid_Data/ColorToGrayscale/: CMakeLists.txt
MultGrid_Data/ColorToGrayscale/src/: color_to_grayscale_gpu.cu  dataset_generator.cpp  main.cpp
MultGrid_Data/MatMul/: CMakeLists.txt
MultGrid_Data/MatMul/src/: dataset_generator.cpp  main_test.cpp  matmul_gpu.cu
Parallel_Scan/: README.md
Parallel_Scan/Scan/: Makefile  run_tests.sh
Parallel_Scan/Scan/src/: scan.cu  scan.h
Reductions/: README.md
Reductions/Reduce/src/: dataset_generator.cpp  main_test.cpp  reduce.cu
Shared_Mem/: CMakeLists.txt  README.md  matmul_benchmark.sh  run_tests.sh
Shared_Mem/MatMul/: CMakeLists.txt
Shared_Mem/MatMul/src/: dataset_generator.cpp
Shared_Mem/TiledCoarseMatMul/: CMakeLists.txt
Shared_Mem/TiledCoarseMatMul/src/: coarse_matmul.cu  coarse_matmul.h  dataset_generator.cpp  main_benchmark.cpp  main_test.cpp
Shared_Mem/TiledMatMul/: CMakeLists.txt  benchmark.sh  run_tests.sh
Shared_Mem/TiledMatMul/src/: dataset_generator.cpp  main_benchmark.cpp  main_test.cpp  matmul_cpu.cpp  matmul_cpu.hpp  tiled_matmul.cu  tiled_matmul.h
